Fix: More visible border-bottom in .writer. Fix: Better comments in experimental.js

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,7 @@ header h1 {
   margin-left: 50px;
   height: 180px;
   max-width: 980px;
-  border-bottom: 1px solid lightblue;
+  border-bottom: 3px solid lightblue;
   visibility: visible;
 }
 
